지도위 단순 필터링까지 성공